# experiments-runner

./: .gitignore  README.md  pyproject.toml
example/: entry.py
example/evaluators/: main.py
example/executors/: main.py
example/experiment_functions/: main.py
example/experiments/: default.py  exp1.py  exp2.py  exp3.py
experiments_runner/: __init__.py  experiments_loader.py  runner.py  utils.py
