[tool.poetry]
name = "experiments_runner"
version = "0.1.0"
description = ""
authors = ["ptflores1 <ptflores1@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
